fix: make card pages and crt filter display properly on small screens
This fixes two issues: One was causing the card page layout to display poorly on mobile (it tried to display both the card and text at the same time), and the other was making the CRT filter not cover the bottom of the screen for small screens.

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -446,7 +446,7 @@ table {
 .crt::after {
   content: " ";
   display: block;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
@@ -460,7 +460,7 @@ table {
 .crt::before {
   content: " ";
   display: block;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
